--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,20 +1,8 @@
 ---
-const pageTitle = "我的 Astro 站点";
+import BaseLayout from "../layouts/BaseLayout.astro";
+const pageTitle = "首页";
 ---
 
-<html lang="zh-CN">
-  <head>
-    <meta charset="utf-8" />
-    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-    <meta name="viewport" content="width=device-width" />
-    <meta name="generator" content={Astro.generator} />
-    <title>{pageTitle}</title>
-  </head>
-  <body>
-    <a href="/">首页</a>
-    <a href="/about">关于</a>
-    <a href="/blog">博客</a>
-
-    <h1>{pageTitle}</h1>
-  </body>
-</html>
+<BaseLayout pageTitle={pageTitle}>
+  <h2>我超棒的博客副标题</h2>
+</BaseLayout>
