--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -1,9 +1,8 @@
 ---
+import { getCollection } from "astro:content";
 import BaseLayout from "../layouts/BaseLayout.astro";
 import BlogPost from "../components/BlogPost.astro";
-const allPosts = Object.values(
-  import.meta.glob("./posts/*.md", { eager: true })
-);
+const allPosts = await getCollection("blog");
 const pageTitle = "我的 Astro 学习博客";
 ---
 
@@ -11,8 +10,8 @@ const pageTitle = "我的 Astro 学习博客";
   <p>在这里，我将分享我的 Astro 学习之旅。</p>
   <ul>
     {
-      allPosts.map((post: any) => (
-        <BlogPost title={post.frontmatter.title} url={post.url} />
+      allPosts.map((post) => (
+        <BlogPost title={post.data.title} url={`/posts/${post.id}`} />
       ))
     }
   </ul>
